@@ -9,13 +9,18 @@
     <version>0.1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>4.13.1</junit.version>
         <arrow.version>18.1.0</arrow.version>
         <guava.version>33.3.1-jre</guava.version>
         <cpp.lib.dir>{project.basedir}/src/main/cpp/build/lib</cpp.lib.dir>
+        <!-- List of add-opens arg line arguments for tests -->
+        <surefire.add-opens.argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</surefire.add-opens.argLine>
+        <!-- org.apache:apache overrides -->
+        <minimalJavaBuildVersion>11</minimalJavaBuildVersion>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.release>11</maven.compiler.release>
     </properties>
 
     <build>
@@ -45,6 +50,13 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>${surefire.add-opens.argLine}</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
